@@ -1,5 +1,5 @@
 #
-# $Id: fit.dem,v 1.11 2013/03/12 19:59:09 sfeam Exp $
+# $Id: fit.dem,v 1.12 2013/04/20 13:54:26 markisch Exp $
 #
 
 print "Some examples how data fitting using nonlinear least squares fit"
@@ -7,7 +7,6 @@ print "can be done."
 print ""
 pause -1 "first plotting the pure data set  (-> return)"
 
-reset
 set title 'data for first fit demo'
 set xlabel "Temperature T  [deg Cels.]"
 set ylabel "Density [g/cm3]"
@@ -101,18 +100,18 @@ print  "cannot be set from inside gnuplot."
 print  ""
 print  "command will be: fit density(x) 'lcdemo.dat' via 'start.par'"
 pause -1  "(-> return)"
-FIT_LIMIT = 1e-10
+set fit limit 1e-10
 fit density(x) 'lcdemo.dat' via 'start.par'
+set fit limit 1e-5
 pause -1 "now look at the result (-> return)"
 set title 'fit with more iterations'
 plot 'lcdemo.dat', density(x)
 pause -1  "(-> return)"
 
-FIT_LIMIT = 1e-5
 print "\nNow a brief demonstration of 3d fitting."
 print "hemisphr.dat contains random points on a hemisphere of"
 print "radius 1, but we let fit figure this out for us."
-print "It takes many iterations, so we limit FIT_MAXITER to 50."
+print "It takes many iterations, so we limit them to 50."
 #HBB: made this a lot harder: also fit the center of the sphere
 #h(x,y) = sqrt(r*r - (x-x0)**2 - (y-y0)**2) + z0
 #HBB 970522: distort the function, so it won't fit exactly:
@@ -121,7 +120,7 @@ x0 = 0.1
 y0 = 0.2
 z0 = 0.3
 r=0.5
-FIT_MAXITER=50
+set fit maxiter 50
 set title 'the scattered points, and the initial parameter'
 splot 'hemisphr.dat' using 1:2:3, h(x,y)
 print "fit function will be: " . GPFUN_h
@@ -143,7 +142,7 @@ print ""
 print "Another possibility is to prescale the variables (set fit prescale),"
 print "which may improve convergence."
 pause -1 "(-> return)"
-undefine FIT_MAXITER   # no limit
+set fit maxiter 0
 
 print "\n\nNow an example how to fit multi-branch functions\n"
 print  "The model consists of two branches, the first describing longitudinal"
@@ -225,10 +224,10 @@ load 'reflect.fnc'
 
 #HBB 970522: Changed initial values to something sensible, i.e. 
 #  something an experienced user of fit would actually use.
-#  FIT_LIMIT is also raised, to ensure a better fit.
+#  The fit limit is also reduced, to ensure a better fit.
 eta = 1.2e-4
 tc = 1.8e-3
-FIT_LIMIT=1e-10
+set fit limit 1e-10
 
 #show variables
 #show functions
@@ -313,13 +312,12 @@ print "We plot the data in each section with the corresponding"
 print "function values."
 
 pause -1 "(-> return)"
+set multiplot layout 2, 2
 splot f(x,y,-3), 'fit3.dat' in 0 u 1:2:4
-pause -1 "(-> return)"
 splot f(x,y,-1), 'fit3.dat' in 1 u 1:2:4
-pause -1 "(-> return)"
 splot f(x,y,1), 'fit3.dat' in 2 u 1:2:4
-pause -1 "(-> return)"
 splot f(x,y,3), 'fit3.dat' in 3 u 1:2:4
+unset multiplot
 pause -1 "(-> return)"
 splot f(x,y,3),  'fit3.dat' in 3 u 1:2:4, \
       f(x,y,1),  'fit3.dat' in 2 u 1:2:4, \
@@ -338,9 +336,9 @@ print '   "fit3.dat" u 1:2:3:4:(1) via a0,a1,a2'
 print ''
 
 print  "You can have a look at all previous fit results by looking into"
-print  "the file 'fit.log' or whatever you defined the env-variable 'FIT_LOGFILE'."
-print  "Remember that this file will always be appended, so remove it"
-print  "from time to time!"
+print  "the file 'fit.log' (or whatever you defined the environment"
+print  "variable 'FIT_LOG' to). Remember that this file will always be"
+print  "appended to, so remove it from time to time."
 print  ""
 pause -1 "Done with fitting demo  (-> return)"
 reset
