@@ -27,6 +27,7 @@ New features, changes and fixes since gnuplot version 4.6
 * CHANGE binary plot options are less order-dependent, but may be persistent
 * CHANGE leave axis log base non-zero so gprintf format %L works on linear axes
 * CHANGE time calcs use the standard epoch date 01-jan-1970 rather than 2000
+* CHANGE fit options are controlled via `set fit` instead of FIT_ variables
 
 
 New features, changes and fixes in gnuplot version 4.6
